Updated Research Proposal

--- a/standard.bib
+++ b/standard.bib
@@ -444,7 +444,7 @@
 	author={F. Aeini and A. M. E. Moghadam and F. Mahmoudi}, 
 	title={Non linear dimensional reduction method based on supervised neighborhood graph}, 
 	year={2014}, 
-	booktitle={Telecommunications (IST), 2014 7th Int. Symp. on}, 
+	booktitle={2014 7th Int. Symp. on Telecommunications (IST)}, 
 	pages={35--40}, 
 	publisher={IEEE},
 	doi={10.1109/ISTEL.2014.7000666}, 
@@ -460,4 +460,14 @@
 	pages={2751--2759},
   	number={5},
  	publisher={Springer}
+}
+
+@inproceedings{weinberger2006introduction,
+	author={Weinberger, Kilian Q and Saul, Lawrence K},
+  	title={An introduction to nonlinear dimensionality reduction by maximum variance unfolding},
+  	year={2006},
+ 	 booktitle={AAAI},
+  	volume={6},
+  	pages={1683--1686},
+  	note = {ISBN 9781577352815},
 }
